--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -11,21 +11,23 @@ popular: true
 
 Kutokana na kasi ya ukuwaji wa tekinolojia hususana uwezo wakuandika application kwenye makonteina kama vile docker, na kuwa na mazingira ya uendelezaji ambayo yapo mawinguni "cloud development environments (CDEs)" ambayo yanawezesha docker.
 
-kume kuwa ni chachu kubwa kwa wasanidi kuacha kutumia nyenzo za zamani na kutumia furasa hii kuendeleza application zao kwani majukwa mengi kwenye internet yanayo toa huduma hizi hayatozi fedha zozote zile na manisha ni bure, wote tunajua adha iliyoko wakati una andika application kiasi cha **MB** ambazo unaweza ukatumia hilo la kwanza, sijaongelea uwezo wakifaa chako inapokuja kwenye swala zima la kuchakata data mfano vitu kama **CPU**, **GPU** **RAM** nk, na bado hatuja ogongelea utata mkubwa kama unafanya kazi kwenye timu pale mnapo share code alafu kwa mwingine hazifanyi kazi haya yote ya mekuwa ni sababu ya waendelezaji kujikita kwa kasi katika majukwa haya. Binafsi sikumbuki mara ya mwisho nilini nilipo jikuta na andika code kwenye machine yangu iwe kwa kutumia virtual machine au hata docker iliyo kuwa installed kwenye machine yangu, kwani hizo nyenzo kwa sasa zimekua zilipendwa. Hasa unahitaji kifaa cha kawaida sana iwe tablet au PC kujiunga kwenye haya majukwaa na tayari unaweza kuandika code. Wakati ambapo mazingira tumeyabadilisha na kuwa mawinguni, nyezo kama vile Docker badoo zinatumika kwa kiyasi kikubwa hata kwenye haya majukwaa ya mawinguni "cloud development environments (CDEs)"
+kume kuwa ni chachu kubwa kwa wasanidi kuacha kutumia nyenzo za zamani na kutumia furasa hii kuendeleza application zao kwani majukwa mengi kwenye internet yanayo toa huduma hizi hayatozi fedha zozote zile na manisha ni bure, wote tunajua adha iliyoko wakati una andika application kiasi cha **MB** ambazo unaweza ukatumia hilo la kwanza, sijaongelea uwezo wakifaa chako inapokuja kwenye swala zima la kuchakata data mfano vitu kama **CPU**, **GPU**, **RAM** nk, na bado hatuja ogongelea utata mkubwa kama unafanya kazi kwenye timu pale mnapo share code alafu kwa mwingine hazifanyi kazi haya yote ya mekuwa ni sababu ya waendelezaji kujikita kwa kasi katika majukwa haya. 
+
+Binafsi sikumbuki mara ya mwisho nilini nilipo jikuta na andika code kwenye mashine yangu iwe kwa kutumia virtual machine au hata docker iliyo kuwa installed kwenye machine yangu, kwani hizo nyenzo kwa sasa zimekua zilipendwa. Hasa unahitaji kifaa cha kawaida sana iwe tablet au PC kujiunga kwenye haya majukwaa na tayari unaweza kuandika code. Wakati ambapo mazingira tumeyabadilisha na kuwa mawinguni, nyezo kama vile **Docker** badoo zinatumika kwa kiyasi kikubwa hata kwenye haya majukwaa ya mawinguni "cloud development environments (CDEs)"
 
 
 Kwa muktadha huu matumizi ya docker kwa wasanidi ya mekuwa ni muhimu na kufahamu kutumia docker imekuwa kama kufahamu kutumia computer au simujanja haiepukiki.
 
 
 
-Mara kadhaa tumejikuta tukifanya kazi kwenye project mbali mbali ambazo mazingira yake hayafunani mfano unaweza kua unaandika code kwenye python 3.7 kwenye project nyingine ukawa unaandika kwenye python 3.9 kama unatumia docker ni rahisi kushawishika kuanzisha makonteina mawili moja kwajili ya 3.7 na jingine kwa ajili ya 3.9, mhh hapa tutakuwa hatujafanya matumizi mazuri ya nyezo zetu "ni ufujaji wa malighafi kwa namna moja au nyingine", njia ambayo ni sahihi nikuwezesha konteina lako liweze kumudu mazingira yote ambayo itarushiwa. 
+Mara kadhaa tumejikuta tukifanya kazi kwenye project mbali mbali ambazo mazingira yake hayafwanani mfano unaweza kua unaandika code kwenye **python 3.7** kwenye project nyingine ukawa unaandika kwenye **python 3.9** kama unatumia docker ni rahisi kushawishika kuanzisha makonteina mawili moja kwajili ya **3.7** na jingine kwa ajili ya **3.9**, mhh hapa tutakuwa hatujafanya matumizi mazuri ya nyezo zetu *"ni ufujaji wa malighafi kwa namna moja au nyingine"*, njia ambayo ni sahihi nikuwezesha konteina lako liweze kumudu mazingira yote ambayo itarushiwa. 
 
 Kwenye makala haya tutakwenda kuangali jisi ambavyo unaweza ukafanya **configuration** kwenye konteina lako la docker ili liweze kumudu matoleo mbali mbali ya python, na kama hufahu kutumia docker usihofo nita kutembeze mjini.
 
-Majukwa mengi ambayo yanatoa huduma za hizi IDE yana ingiliana vizuri na mabomba ya uendelezaji kama vile GitLab, GitHub, na Bitbucket. Ili kuanza mchakato huu nita tumia GitHub kama hadhina yangu ya code
+Majukwa mengi ambayo yanatoa huduma za hizi IDE yana ingiliana vizuri na mabomba ya uendelezaji kama vile **GitLab**, **GitHub**, na **Bitbucket**. Ili kuanza mchakato huu nita tumia GitHub kama hadhina yangu ya code
 Hasa nita anzaa na hadhina ambayo ni mpya Ili twende sawa. Kwenye hadhina hii kwa sasa haitakuwa na chochote isipokuwa faili moja tu la readme.md.
 
-Kutokea hapo kazi ni kwako kuchagua jukwaa ambalo ungependelea ulitumie kwa ajili ya usanidi majukwa ni mengi na yanatofautiana kwenye ukomo. Gitpod, Codespace, Codesandbox, repl.it goormIDE nk
+Kutokea hapo kazi ni kwako kuchagua jukwaa ambalo ungependelea ulitumie kwa ajili ya usanidi majukwa ni mengi na yanatofautiana kwenye ukomo. **Gitpod, Codespace, Codesandbox, repl.it goormIDE nk**
 
 
 
@@ -51,11 +53,17 @@ Ngoja tulivunje vunje kwa muktasiri ili kuweza kuelewa nini kinaendelea kwenye h
 Faili hili la **docker-compose** lina onyesha huduma inayo julikana kama "web". Mchakato mzima uko hivi:
 
 	• **version:** '3.8': hii inaonyeshe toleo la faili la docker-compose ambalo tunatumia.
+
 	• **services:** Hapa ndipo unapo onyesha huduma za application yako.
+
 	• **web:** Hili ndilo jina la huduma tunayo onyesha.
+
 	• **build:** Hapa kwenye hii sehemu tuna bainisha jinsi tutakavyo jenga image ya docker Kwa ajili ya huduma.
+
 		○ **context: .:** Hii ina ashiria kwamba tutajenga kwenye directory hii, tafsiri yake nikwamba itaangalia Dockerfile kwenye hii directory.
+
 		○ **dockerfile:** Dockerfile: Hii ina bainisha kua jina la dockerfile ndilo litakalo tumika kujenga image. Kwenye kisa hiki, ni Dockerfile kwenye hii directory.
+
 **Muktasari**
 Hili faili la docker-compose haswa lina iambia Docker kujenga image kwa kutumia Dockerfile iliyo kuwepo kwenye hii directory, nakuipa jina la "web" kama huduma. Una weza kutumia faili hili la docker-compose kujenga na kuendesha application kwa kutumia command moja tu: `docker-compose up`.
 
