--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -219,8 +219,9 @@ kuinstall hivi vitegemezi vya ziada bado natumia `apt-get install`  "kumbuka nip
 
 Mara baada ya kutengeneza hiyo script, hakikisha inaweza kutekelenzwa 
 
+```bash
 chmod +x /ai/entrypoint.sh
-
+```
 
 Faili la `supervisord.conf` tume liita sehemu kadhaa lakini bado hatujalitengeneza, sasa litengeneze
 
