--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -220,7 +220,7 @@ kuinstall hivi vitegemezi vya ziada bado natumia `apt-get install`  "kumbuka nip
 Mara baada ya kutengeneza hiyo script, hakikisha inaweza kutekelenzwa 
 
 ```bash
-chmod +x /ai/entrypoint.sh
+chmod +x entrypoint.sh
 ```
 
 Faili la `supervisord.conf` tume liita sehemu kadhaa lakini bado hatujalitengeneza, sasa litengeneze
@@ -264,12 +264,258 @@ Tumeona kwamba unaweza kutumia command ya `docker run -it` kuanzisha konteina ku
 
 Kwanini kuandikia mate wakati wino upo, twende tukazishuhudi command zote mbili kwa vitendo ili kujifunza na kuielewa docker kabla yakuzama kenye pyenv
 
+Nimeanza na kujenga image
+
+```bash
+docker build -t image_ya_pyenv .
+```
+
+usiogope kama unaona inachuka mda kidogo, nikwa sababu ina install vitegemezi vingi kidogo na kuinstall python kutokea kwenye chanzo badala ya hadhina
+kama tulivyo ielekeza.
+
+
+Mar baada ya image kujengwa, unaweza kutazama image kwa kutumia command hii
+
+```bash
+docker images -a
+REPOSITORY       TAG       IMAGE ID       CREATED         SIZE
+image_ya_pyenv   latest    6c6b3777af9d   3 minutes ago   977MB
+```
+
+
+Ingia kwenye bash shell ya kointeina lako ili kuweza kulitumia
+```bash
+docker run -it image_ya_pyenv /bin/bash
+```
+
+
+ukiwa ndani ya bash shell ya kointeina unaweza kuangali toleo la pyvenv kwa kutumia `pyenv --version` kama hivi:
+
+```bash
+root@c0a45e8f8b42:/app# pyenv --version
+pyenv 2.3.36
+```
+
+Kutoka kwenye bash sell ya kointeina kwenye keybord yako utashikilia vitufe vya `Ctrl` na `D`
+
+utatoka kwenye kointeina na michakato yote ya kointeina itaishia hapo
+
+kwa kutumia command ya `docker ps` ambayo inaonyesha michakato iliyo hai, huwezi kuona kitu
+
+```bash
+docker ps
+CONTAINER ID   IMAGE     COMMAND   CREATED   STATUS    PORTS     NAMES
+```
+
+Halikadhalika kwa kutumia docker-compose ps hutaona kitu kwa sababu kointainer halipo
+
+```bash
+docker-compose ps
+NAME      IMAGE     COMMAND   SERVICE   CREATED   STATUS    PORTS
+```
 
 
 
+Command ifutayo utaitumia ukihitaji kuondoa makonteina yaliyo zimwa, network zote ambazo hakuna konteina linalo tumia 
+pamoja na image zote ambazo hazihusiani na konteina lolote pamoja na mijengo yote ambayo imekua imehifadhiwa
+
+```bash
+docker system prune -a
+```
+
+Sasa tuangali command ya `docker-compose up -d` 
+
+ianzishe hiyo command
+
+```bash
+docker-compose up -d
+```
+
+Angalia kama konteina linafanya kazi
+
+```bash
+docker-compose ps
+NAME                     IMAGE                  COMMAND                  SERVICE   CREATED         STATUS         PORTS
+python-multy-env-web-1   python-multy-env-web   "/usr/bin/supervisor…"   web       5 minutes ago   Up 5 minutes   
+```
+
+kuingi kwenye bash shell ya kointeina weka hii command
+
+```bash
+docker-compose exec web /bin/bash
+```
+
+Angali toleo la python ukiwa ndani ya konteina
+
+```bash
+root@95186218d059:/app# python3 --version
+Python 3.10.0
+```
+
+toka kwenye konteina kwa kubofya vitufe vya `Ctrl na D` kwenye keybord yako
+
+hakikisha bado konteina lina fanya kazi
+
+```bash
+docker-compose ps
+NAME                     IMAGE                  COMMAND                  SERVICE   CREATED          STATUS          PORTS
+python-multy-env-web-1   python-multy-env-web   "/usr/bin/supervisor…"   web       12 minutes ago   Up 12 minutes   
+```
+
+
+lizime konteina kwa kutumia `ocker-compose stop`
+
+```bash
+docker-compose stop
+[+] Stopping 1/1
+ ✔ Container python-multy-env-web-1  Stopped      
+```
+
+tumia docker-compose ps kuhakikisha hakuna mchakato wa konteina unao endelea.
+
+```bash
+docker-compose ps
+NAME      IMAGE     COMMAND   SERVICE   CREATED   STATUS    PORTS
+```
+
+Nimatumaini yangu kwamba unaweza kutawala konteina lako bila mashaka, kuanzia hapa akili na mawazo tuelekeze kwenye
+kuandaa manzingira kwajili yakuruhusu uwezo wakua na mazingira ya python ambayo yana matoleo tofauti kwenye konteina lako.
+
+Ukiwa ndani ya konteina angalia kama kuna script ya `pyenv.sh` kwenye directory ya `/etc/profile.d`
+
+```bash
+root@95186218d059:/app# ls -ali /etc/profile.d
+total 4
+ 591416186 drwxr-xr-x 2 root root 30 Feb 27 16:02 .
+2837582640 drwxr-xr-x 1 root root 66 Mar 11 05:42 ..
+ 591416187 -rw-r--r-- 1 root root 96 Oct 15  2021 01-locale-fix.sh
+```
+
+kwa mujibu wa taarifa ninazo ziona hapo nikwamba hilo faili halipo tulitengeneze kwa kutumia kihariri cha `nano` au kihariri chochote kile unacho pendelea
+huu mzigo unakuja nikiwa nimeuwezesha na `nano`.
+
+```bash
+nano /etc/profile.d/pyenv.sh
+```
+utaweka ukimaliza uta save kwa kushikilia vitufe vya `Ctrl` na `O` kisha uta bofya `Enter` kwenye keyboard yako 
+
+```bash
+export PYENV_ROOT="/opt/pyenv"
+export PATH="$PYENV_ROOT/bin:$PATH"
+eval "$(pyenv init --path)"
+```
+
+Baada ya kusave hilo faili ni mda wakuhakikisha hizo varible zinatambulika kwenye mfumo wetu kwaku zi `source` 
+
+```bash
+source /etc/profile.d/pyenv.sh
+```
+
+weka `exec $SHELL` ili kuanzisha bash sell ikiwa na hizo taarifa
+
+```bash
+root@95186218d059:/app# exec $SHELL
+root@95186218d059:/app# 
+```
 
 
 
+kuna orotha ya matoleo yote ya python ambayo yako kwenye Pyenv ambayo unaweza ku install kwenye ubuntu fanya hivi, orotha nindefu sita ionyesha hapa.
+
+```bash
+pyenv install --list
+```
+
+install toleo la python lolote lile unalo hitaji hapa nita `install 3.9.7` 
+
+```bash
+pyenv install 3.9.7
+```
+
+Kuangalia matoleo yote ya python ambayo yamekua installed kwenye machine yako fanya hivi
+
+```bash
+root@95186218d059:/app# pyenv versions
+  system
+  3.9.7
+* 3.10.0 (set by /opt/pyenv/version)
+```
+
+Kama uta hitaji kuweka toleo flani la python kama chaguo la msingi unaweza kufanya hivi `pyenv global 3.11.0``
+kwenye kisa changu nita acha `3.10.0` kama chaguo la msingi
+
+
+
+ili kuanda mazingira ya kuandika code za python ambayo toleo lake ni 3.9.0 fanya hivi
+tengeneza directory `mkdir jaribio` jina la directory linaweza kuo chochote kile
+
+```bash
+root@95186218d059:/app# mkdir jaribio
+```
+
+ingia kwenye directory 
+
+```bash
+root@95186218d059:/app# cd jaribio/
+```
+
+tumia njia ya moja kwa moja kuonyesha kitekezezaji cha tole la python unalo hitaji kutumia kutengeneza **virtual eviroment** kina patikana wapi  `/opt/pyenv/versions/3.9.7/bin/python3.9 -m venv venv`
+
+```bash
+root@95186218d059:/app/jaribio# /opt/pyenv/versions/3.9.7/bin/python3.9 -m venv venv
+```
+bada yahapo uta amalisha "activate" hilo eneo kama kawaida
+
+```bash
+root@95186218d059:/app/jaribio# source venv/bin/activate
+```
+unaweza kuona kwamba hili eneo linatumia python 3.9.7 kama tulivyo kusudia
+
+```bash
+(venv) root@95186218d059:/app/jaribio# python3 --version
+Python 3.9.7
+```
+
+Unaweza kutumia mtawala wa vifurushi vya python kuorothesha vifurushi ambavyo viko kwenye haya mazingira kwa kutumia `pip3`
+
+```bash
+(venv) root@95186218d059:/app/jaribio# pip3 list
+Package    Version
+---------- -------
+pip        21.2.3
+setuptools 57.4.0
+WARNING: You are using pip version 21.2.3; however, version 24.0 is available.
+You should consider upgrading via the '/app/jaribio/venv/bin/python3.9 -m pip install --upgrade pip' command.
+```
+
+Kama tunavyo ona tuna onyo ambalo lina tuhitaji kusasisha toleo la pip fanya hivi kusasisha
+
+```bash
+(venv) root@95186218d059:/app/jaribio# pip3 install -U pip
+Requirement already satisfied: pip in ./venv/lib/python3.9/site-packages (21.2.3)
+Collecting pip
+  Downloading pip-24.0-py3-none-any.whl (2.1 MB)
+     |████████████████████████████████| 2.1 MB 4.7 MB/s 
+Installing collected packages: pip
+  Attempting uninstall: pip
+    Found existing installation: pip 21.2.3
+    Uninstalling pip-21.2.3:
+      Successfully uninstalled pip-21.2.3
+Successfully installed pip-24.0
+```
+bada ya kusasisha `pip3` hatutarajii kuona onyo tene 
+
+```bash
+(venv) root@95186218d059:/app/jaribio# pip3 list
+Package    Version
+---------- -------
+pip        24.0
+setuptools 57.4.0
+```
+
+
+
+Hongera sasa una konteina mbalo liko tayari kuchuka matoleo kadhaa tofauti tofauti ya python bila wasisi wasi, code mnono.
 
 
 
