--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -9,7 +9,7 @@ topPick: false
 popular: true
 ---
 
-Kutokana na kasi ya ukuwaji wa tekinolojia hususana uwezo wakuandika application kwenye makonteina kama vile docker, na kuwa na mazingira ya uendelezaji ambayo yapo mawinguni "cloud development environments (CDEs)" ambayo yanawezesha docker.
+Kutokana na kasi ya ukuwaji wa tekinolojia hususani uwezo wakuandika application kwenye makonteina kama vile docker, na kuwa na mazingira ya uendelezaji ambayo yapo mawinguni "cloud development environments (CDEs)" ambayo yanawezesha docker.
 
 kume kuwa ni chachu kubwa kwa wasanidi kuacha kutumia nyenzo za zamani na kutumia furasa hii kuendeleza application zao kwani majukwa mengi kwenye internet yanayo toa huduma hizi hayatozi fedha zozote zile na manisha ni bure, wote tunajua adha iliyoko wakati una andika application kiasi cha **MB** ambazo unaweza ukatumia hilo la kwanza, sijaongelea uwezo wakifaa chako inapokuja kwenye swala zima la kuchakata data mfano vitu kama **CPU**, **GPU**, **RAM** nk, na bado hatuja ogongelea utata mkubwa kama unafanya kazi kwenye timu pale mnapo share code alafu kwa mwingine hazifanyi kazi haya yote ya mekuwa ni sababu ya waendelezaji kujikita kwa kasi katika majukwa haya. 
 
