--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -13,7 +13,7 @@ Kutokana na kasi ya ukuwaji wa tekinolojia hususani uwezo wakuandika application
 
 kume kuwa ni chachu kubwa kwa wasanidi kuacha kutumia nyenzo za zamani na kutumia furasa hii kuendeleza application zao kwani majukwa mengi kwenye internet yanayo toa huduma hizi hayatozi fedha zozote zile na manisha ni bure, wote tunajua adha iliyoko wakati una andika application kiasi cha **MB** ambazo unaweza ukatumia hilo la kwanza, sijaongelea uwezo wakifaa chako inapokuja kwenye swala zima la kuchakata data mfano vitu kama **CPU**, **GPU**, **RAM** nk, na bado hatuja ogongelea utata mkubwa kama unafanya kazi kwenye timu pale mnapo share code alafu kwa mwingine hazifanyi kazi haya yote ya mekuwa ni sababu ya waendelezaji kujikita kwa kasi katika majukwa haya. 
 
-Binafsi sikumbuki mara ya mwisho nilini nilipo jikuta na andika code kwenye mashine yangu iwe kwa kutumia virtual mashine au hata docker iliyo kuwa installed kwenye machine yangu, kwani hizo nyenzo kwa sasa zimekua zilipendwa. Hasa unahitaji kifaa cha kawaida sana iwe tablet au PC kujiunga kwenye haya majukwaa na tayari unaweza kuandika code. Wakati ambapo mazingira tumeyabadilisha na kuwa mawinguni, nyezo kama vile **Docker** badoo zinatumika kwa kiyasi kikubwa hata kwenye haya majukwaa ya mawinguni "cloud development environments (CDEs)"
+Binafsi sikumbuki mara ya mwisho nilini nilipo jikuta na andika code kwenye mashine yangu iwe kwa kutumia virtual mashine au hata docker iliyo kuwa installed kwenye mashine yangu, kwani hizo nyenzo kwa sasa zimekua zilipendwa. Hasa unahitaji kifaa cha kawaida sana iwe tablet au PC kujiunga kwenye haya majukwaa na tayari unaweza kuandika code. Wakati ambapo mazingira tumeyabadilisha na kuwa mawinguni, nyezo kama vile **Docker** badoo zinatumika kwa kiyasi kikubwa hata kwenye haya majukwaa ya mawinguni "cloud development environments (CDEs)"
 
 
 Kwa muktadha huu matumizi ya docker kwa wasanidi ya mekuwa ni muhimu na kufahamu kutumia docker imekuwa kama kufahamu kutumia computer au simujanja haiepukiki.
