--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -266,7 +266,7 @@ command kubwa mbili ambazo ninge penda uweze kuzifahamu, ili uweze kuanzisha  ko
 Kwa ufupi, command ya `docker run` inatumika kuanzisha konteina moja, na moja kwa  moja  inakupa uwezo wa kuingliana nalo, na `docker-compose up -d` ina tumika kusimamia  makonteina kadhaa ya applications zilizo fafanuliwa kwenye faili la `docker-compose.yml`, huanzisha huduma zikiwa katika hali ya kuambatanishwa .
 
 
-Tumeona kwamba unaweza kutumia command ya `docker run -it` kuanzisha konteina kutokea kwenye imagine utakayo kua umeionyesha na moja kwa moja konteina lita anza na utaingiliana nalo command nyingine inayo kupa uwezo wa kuingiliana na konteina lako ni docker-compose exec tuna itumia kutekeleza command ndani ya konteina linalo simamiwa na **Docker Compose**. Lazima huduma ziwe zimefafanuliwa kwenye faili la `docker-compose.yml`
+Tumeona kwamba unaweza kutumia command ya `docker run -it` kuanzisha konteina kutokea kwenye imagine utakayo kua umeionyesha na moja kwa moja konteina lita anza na utaingiliana nalo command nyingine inayo kupa uwezo wa kuingiliana na konteina lako ni `docker-compose exec` tuna itumia kutekeleza command ndani ya konteina linalo simamiwa na **Docker Compose**. Lazima huduma ziwe zimefafanuliwa kwenye faili la `docker-compose.yml`
  Uchaguzi wa command ipi utumie inakuja kwenye mazingira. Kama unataka kuanzisha konteina jipya kutokea kwenye image na uingiliane nalo moja kwa moja hopo  `run -it` inakuwa sahihi inafanya kazi na image yoyote na haihitaji uwepo wa faili la `docker-compose.yml` 
 
 
