--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -242,7 +242,7 @@ Kwa hiyo, kwa ufupi, supervisord ni ya lazima kwenye kisa chetu ili konteina lie
 
 
 
-Tumesha tengeneza mafaili au scripts ambazo zipo tayari kutekelezwa ili kujenga konteina la docker ambalo linauweza wa kuandaa manzingira ya python yenye 
+Tumesha tengeneza mafaili au scripts ambazo zipo tayari kutekelezwa ili kujenga konteina la docker ambalo linauwezo wa kuandaa manzingira ya python yenye 
 matoleo tofauti tofauti lakini kabla hatuja songa mbele na zoezi la kujenga hili konteina ningependa tuangalie kwa undani kidogo 
 command kubwa mbili ambazo ninge penda uweze kuzifahamu, ili uweze kuanzisha  konteina lako la docker kwa usahihi zaidi.
 	1. **docker run -it my_image_name**:
