--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -360,7 +360,7 @@ root@95186218d059:/app# python3 --version
 Python 3.10.0
 ```
 
-toka kwenye konteina kwa kubofya vitufe vya `Ctrl na D` kwenye keybord yako
+toka kwenye konteina kwa kubofya vitufe vya `Ctrl na D` kwenye keybord yako, kutoka bofya `Ctrl na X`
 
 hakikisha bado konteina lina fanya kazi
 
