--- a/content/technology/python/post.mdx
+++ b/content/technology/python/post.mdx
@@ -360,7 +360,7 @@ root@95186218d059:/app# python3 --version
 Python 3.10.0
 ```
 
-toka kwenye konteina kwa kubofya vitufe vya `Ctrl na D` kwenye keybord yako, kutoka bofya `Ctrl na X`
+toka kwenye konteina kwa kubofya vitufe vya `Ctrl na D` kwenye keybord yako
 
 hakikisha bado konteina lina fanya kazi
 
@@ -405,7 +405,7 @@ huu mzigo unakuja nikiwa nimeuwezesha na `nano`.
 ```bash
 nano /etc/profile.d/pyenv.sh
 ```
-utaweka ukimaliza uta save kwa kushikilia vitufe vya `Ctrl` na `O` kisha uta bofya `Enter` kwenye keyboard yako 
+utaweka ukimaliza uta save kwa kushikilia vitufe vya `Ctrl` na `O` kisha uta bofya `Enter` kwenye keyboard yako, kutoka bofya `Ctrl na X` 
 
 ```bash
 export PYENV_ROOT="/opt/pyenv"
