--- a/content/technology/4-things-every-programmer-should-know/post.mdx
+++ b/content/technology/4-things-every-programmer-should-know/post.mdx
@@ -9,7 +9,7 @@ topPick: false
 popular: false
 ---
 
-This file contains various Markdown snippets that you may use to construct an article. Markdown is very easy to use!
+This file contains various Test Markdown snippets that you may use to construct an article. Markdown is very easy to use!
 
 ## Markdown Guide
 
